--- a/PIA/Views/RegistroPage.xaml
+++ b/PIA/Views/RegistroPage.xaml
@@ -3,136 +3,123 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PIA.Views.RegistroPage"
              Title="RegistroPage">
-    <Grid RowDefinitions=".3*,.7*">
-        <Image Aspect="AspectFill" Source="segestan.png"/>
-        <Grid Grid.Row="1">
-            <RoundRectangle Margin="-5, -30, -5, -2"
-                    CornerRadius="30,30,0,0"
-                    Fill="white"/>
-            <VerticalStackLayout Margin="30,0,30,0" >
-                <Label FontAttributes="Bold"
-               FontFamily="bold"
-               FontSize="Medium"
-               Text="Bienvenido"
-               TextColor="#2D2D2D"/>
-                <Label FontFamily="medium"
-               Text="Registra los datos para continuar"
-               TextColor="#A3A3A4"/>
-                <!--Ingreso de id-->
-                <Grid Margin="0,30,0,0" ColumnDefinitions=".2*,.8*">
-                    <RoundRectangle BackgroundColor="#5271ff"
-                                CornerRadius="10"
-                                HeightRequest="40"
-                                HorizontalOptions="Center"
-                                VerticalOptions="Center"
-                                WidthRequest="40"/>
-                    <Image 
-                    HorizontalOptions="Center" Source="emp.svg">
-                    </Image>
-                    <Entry x:Name="idEmpEntry"
-                        Grid.Column="1"
-                        Placeholder="Id_Empresa"
-                        Text=""
-                        TextColor="Black"
-                        VerticalOptions="Center"
-                       Keyboard="Numeric"
-                       MaxLength="10">
-                    </Entry>
-                </Grid>
 
-                <!--Nombre-->
-                <Grid Margin="0,30,0,0" ColumnDefinitions=".2*,.8*">
-                    <RoundRectangle BackgroundColor="#5271ff"
-                                CornerRadius="10"
-                                HeightRequest="40"
-                                HorizontalOptions="Center"
-                                VerticalOptions="Center"
-                                WidthRequest="40"/>
-                    <Image 
-                    HorizontalOptions="Center" Source="user.svg">
-                    </Image>
-                    <Entry x:Name="nameEntry"
-                        Grid.Column="1"
-                        Placeholder="Nombre"
-                        Text=""
-                        TextColor="Black"
-                        VerticalOptions="Center"
-                        >
-                    </Entry>
-                </Grid>
+    <!-- Agregar un ScrollView con manejo de teclado -->
+    <ScrollView VerticalOptions="FillAndExpand" Padding="10">
+        <Grid RowDefinitions=".3*,.7*">
+            <Image Aspect="AspectFill" Source="segestan.png"/>
 
-                <!--Ingreso de telefono-->
-                <Grid Margin="0,30,0,0" ColumnDefinitions=".2*,.8*">
-                    <RoundRectangle BackgroundColor="#5271ff"
-                                CornerRadius="10"
-                                HeightRequest="40"
-                                HorizontalOptions="Center"
-                                VerticalOptions="Center"
-                                WidthRequest="40"/>
-                    <Image 
-                        HorizontalOptions="Center" Source="phone.svg">
-                    </Image>
-                    <Entry x:Name="phoneEntry"
-                       Grid.Column="1"
-                       Placeholder="Phone Number"
-                       Text=""
-                       TextColor="Black"
-                       VerticalOptions="Center"
-                       Keyboard="Numeric"
-                       MaxLength="10"
-                     >
+            <Grid Grid.Row="1">
+                <RoundRectangle Margin="-5, -30, -5, -2"
+                                CornerRadius="30,30,0,0"
+                                Fill="white"/>
+                <VerticalStackLayout Margin="30,0,30,0">
+                    <Label FontAttributes="Bold"
+                           FontFamily="bold"
+                           FontSize="Medium"
+                           Text="Bienvenido"
+                           TextColor="#2D2D2D"/>
+                    <Label FontFamily="medium"
+                           Text="Registra los datos para continuar"
+                           TextColor="#A3A3A4"/>
 
-                    </Entry>
-                </Grid>
+                    <!-- Selección de tipo de usuario -->
+                    <Picker x:Name="rolePicker"
+                            Title="Seleccion de tipo de usuario"
+                            TextColor="Black"
+                            BackgroundColor="White"
+                            FontSize="Medium"
+                            HeightRequest="50"
+                            HorizontalOptions="FillAndExpand"
+                            Margin="0,20,0,20">
+                        <Picker.ItemsSource>
+                            <x:Array Type="{x:Type x:String}">
+                                <x:String>Guardia</x:String>
+                                <x:String>Residente</x:String>
+                            </x:Array>
+                        </Picker.ItemsSource>
+                    </Picker>
 
-                <!--Ingreso de email-->
-                <Grid Margin="0,30,0,0" ColumnDefinitions=".2*,.8*">
-                    <RoundRectangle BackgroundColor="#5271ff"
-                            CornerRadius="10"
-                            HeightRequest="40"
-                            HorizontalOptions="Center"
-                            VerticalOptions="Center"
-                            WidthRequest="40"/>
-                    <Image HorizontalOptions="Center" Source="mail.svg">
-                    </Image>
-                    <Entry x:Name="emailEntry"
-                   Grid.Column="1"
-                   Placeholder="Email"
-                   Text=""
-                   TextColor="Black"
-                   VerticalOptions="Center"></Entry>
-                </Grid>
+                    <!-- Campos de entrada: Nombre -->
+                    <Grid Margin="0,10,0,0" ColumnDefinitions=".2*,.8*">
+                        <RoundRectangle BackgroundColor="#5271ff"
+                                        CornerRadius="10"
+                                        HeightRequest="40"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        WidthRequest="40"/>
+                        <Image HorizontalOptions="Center" Source="user.svg"/>
+                        <Entry x:Name="nameEntry"
+                               Grid.Column="1"
+                               Placeholder="Nombre"
+                               Text=""
+                               TextColor="Black"
+                               VerticalOptions="Center"/>
+                    </Grid>
 
-                <!--ingreso Contraseña-->
-                <Grid Margin="0,30,0,0" ColumnDefinitions=".2*,.8*">
-                    <RoundRectangle BackgroundColor="#5271ff"
-                CornerRadius="10"
-                HeightRequest="40"
-                HorizontalOptions="Center"
-                VerticalOptions="Center"
-                WidthRequest="40"/>
-                    <Image HorizontalOptions="Center" Source="pass.svg">
-                    </Image>
-                    <Entry x:Name="PasswordEntry"
-                   Grid.Column="1"
-                   Placeholder="Password"
-                   IsPassword="True"
-                   Text=""
-                   TextColor="Black"
-                   VerticalOptions="Center"></Entry>
-                </Grid>
+                    <!-- Teléfono -->
+                    <Grid Margin="0,10,0,0" ColumnDefinitions=".2*,.8*">
+                        <RoundRectangle BackgroundColor="#5271ff"
+                                        CornerRadius="10"
+                                        HeightRequest="40"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        WidthRequest="40"/>
+                        <Image HorizontalOptions="Center" Source="phone.svg"/>
+                        <Entry x:Name="phoneEntry"
+                               Grid.Column="1"
+                               Placeholder="Número de teléfono"
+                               Text=""
+                               TextColor="Black"
+                               VerticalOptions="Center"
+                               Keyboard="Numeric"
+                               MaxLength="10"/>
+                    </Grid>
 
-                <Button 
-            Margin="0,20,0,0"
-            BackgroundColor="#5271ff"
-            HeightRequest="60"
-            Text="Registrar"
-            TextColor="White"
-            Clicked="btnRegistrar">
-                </Button>
+                    <!-- Email -->
+                    <Grid Margin="0,10,0,0" ColumnDefinitions=".2*,.8*">
+                        <RoundRectangle BackgroundColor="#5271ff"
+                                        CornerRadius="10"
+                                        HeightRequest="40"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        WidthRequest="40"/>
+                        <Image HorizontalOptions="Center" Source="mail.svg"/>
+                        <Entry x:Name="emailEntry"
+                               Grid.Column="1"
+                               Placeholder="Email"
+                               Text=""
+                               TextColor="Black"
+                               VerticalOptions="Center"/>
+                    </Grid>
 
+                    <!-- Contraseña -->
+                    <Grid Margin="0,10,0,0" ColumnDefinitions=".2*,.8*">
+                        <RoundRectangle BackgroundColor="#5271ff"
+                                        CornerRadius="10"
+                                        HeightRequest="40"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        WidthRequest="40"/>
+                        <Image HorizontalOptions="Center" Source="pass.svg"/>
+                        <Entry x:Name="PasswordEntry"
+                               Grid.Column="1"
+                               Placeholder="Contraseña"
+                               IsPassword="True"
+                               Text=""
+                               TextColor="Black"
+                               VerticalOptions="Center"/>
+                    </Grid>
 
-            </VerticalStackLayout>
+                    <!-- Botón de registro -->
+                    <Button Margin="0,20,0,0"
+                            BackgroundColor="#5271ff"
+                            HeightRequest="60"
+                            Text="Registrar"
+                            TextColor="White"
+                            Clicked="btnRegistrar"/>
+                </VerticalStackLayout>
+            </Grid>
         </Grid>
-    </Grid>
+    </ScrollView>
 </ContentPage>
