--- a/PIA/Views/Gvisita.xaml
+++ b/PIA/Views/Gvisita.xaml
@@ -2,11 +2,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PIA.Views.Gvisita"
-             Title="Gvisita">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="Generar QR de Visita">
+    <VerticalStackLayout Padding="20" Spacing="15" VerticalOptions="Center">
+        <Entry x:Name="nameEntry" Placeholder="Nombre del visitante" />
+
+        <Picker x:Name="rolePicker" Title="Tipo de visita">
+            <Picker.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>Frecuente</x:String>
+                    <x:String>Única vez</x:String>
+                </x:Array>
+            </Picker.ItemsSource>
+        </Picker>
+
+        <Button Text="Generar QR" Clicked="btnGenQR" />
+
+        <!-- Aquí está el Image para mostrar el QR -->
+        <Image x:Name="qrImageView" HeightRequest="300" WidthRequest="300" VerticalOptions="Center" />
     </VerticalStackLayout>
 </ContentPage>
