--- a/PIA/Views/Cguardia.xaml
+++ b/PIA/Views/Cguardia.xaml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PIA.Views.InterfazUs"
-             Title="InterfazUs"
-             Background="#F1F1F1">
-             
+             x:Class="PIA.Views.Cguardia"
+             Title="Contactar guardia"
+              Background="#F1F1F1">
     <VerticalStackLayout VerticalOptions="Center">
         <Label Text="Bienvenido residente"
                FontSize="Medium"  
@@ -12,55 +11,18 @@
             TextColor="Black"
             HorizontalOptions="Center"
             Margin="0,0" />
-        <Label Text="¿Qué deseas hacer hoy?"
+        <Label Text="¿Qué metodo desea usar para contacto?"
                FontSize="Medium"
             TextColor="Black"
             HorizontalOptions="Center"
             VerticalOptions="Center"
             Margin="0,30" />
-            <Label Text="Generar visita"
+        <Label Text="Llamada"
                HorizontalOptions="Center"
                VerticalOptions="Center"
                TextColor="Black"
                FontSize="Medium"
                FontAttributes="Bold"/>
-        <ImageButton Source="visita.png" 
-                     Aspect="Fill"
-                     BorderColor="Black"
-                     WidthRequest="350"
-                     BorderWidth="2"
-                     CornerRadius="70"
-                     Padding="5"
-                     IsEnabled="True"
-                     BackgroundColor="#5271ff"
-                     HeightRequest="150"
-                     Clicked="IB_Gvisita">
-        </ImageButton>
-        
-           <Label Text="Eliminar Visita"
-           HorizontalOptions="Center"
-           VerticalOptions="Center"
-           TextColor="Black"
-           FontSize="Medium"
-           FontAttributes="Bold"/>
-            <ImageButton Source="eliminarvis.png" 
-                     Aspect="Fill"
-                     BorderColor="Black"
-                     WidthRequest="350"
-                     BorderWidth="2"
-                     CornerRadius="70"
-                     Padding="5"
-                     IsEnabled="True"
-                     BackgroundColor="#5271ff"
-                     HeightRequest="150"
-                     Clicked="IB_Evisita">
-        </ImageButton>
-        <Label Text="Contactar Guardia"
-               HorizontalOptions="Center"
-               VerticalOptions="Center"
-               TextColor="Black"
-               FontSize="Medium"
-               FontAttributes="Bold"/>     
         <ImageButton Source="contactargua.png" 
                      Aspect="Fill"
                      BorderColor="Black"
@@ -71,7 +33,26 @@
                      IsEnabled="True"
                      BackgroundColor="#5271ff"
                      HeightRequest="150"
-                     Clicked="IB_Cguardia">
+                     Clicked="CallGuardButton_Clicked">
+        </ImageButton>
+
+        <Label Text="Whatsapp"
+           HorizontalOptions="Center"
+           VerticalOptions="Center"
+           TextColor="Black"
+           FontSize="Medium"
+           FontAttributes="Bold"/>
+        <ImageButton Source="contactargua.png" 
+                     Aspect="Fill"
+                     BorderColor="Black"
+                     WidthRequest="350"
+                     BorderWidth="2"
+                     CornerRadius="70"
+                     Padding="5"
+                     IsEnabled="True"
+                     BackgroundColor="#5271ff"
+                     HeightRequest="150"
+                     Clicked="ContactGuardOnWhatsApp_Clicked">
         </ImageButton>
     </VerticalStackLayout>
 </ContentPage>
